@@ -10,6 +10,7 @@ Morten:
 	* Make sure CEIL doesn't return -0.  [#603]
 	* Add ILOG function.  [#591]
 	* Fix MROUND.  [#604]
+	* Take evasive action re g_memdup.
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.50
